# nonogram-solver-rust-wasm

./: .gitignore  README.md  example.js  index.html
solver-wasm/: Cargo.toml
solver-wasm/benches/: performance_test.rs
solver-wasm/data/: 10x10.json  15x10.json  15x15.json  20x20.json  25x25.json  30x30.json  5x5.json
solver-wasm/src/: lib.rs  model.rs  old_model.rs  performance_tests.rs
solver-wasm/tests/: integration_test.rs
