[package]
name = "solver_wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
itertools = "0.14.0"
wasm-bindgen = "0.2.105"

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
statistical = "1.0.0"

[[bench]]
name = "performance_test"
harness = false